--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@
 ###< phpunit/phpunit ###
 
 ###> symfony/asset-mapper ###
-/public/assets/
+/public/assets/uploads
 /assets/vendor/
 ###< symfony/asset-mapper ###
